# veracruz

./: .gitignore  .gitmodules  Makefile
.cargo/: config
.github/workflows/: main.yml
execution-engine/: Cargo.toml
execution-engine/src/: fs.rs  lib.rs
execution-engine/src/wasi/: common.rs  wasmi.rs
icecap/: .gitignore  Makefile  default.nix  realm-crates  targets.nix
icecap/docker/: Dockerfile
icecap/nix/: default.nix  instance.nix  test-database.nix
icecap/nix/binaries/: runtime-manager.nix  test.nix  veracruz-server-test.nix  veracruz-test.nix
icecap/nix/host/: config.nix
icecap/nix/host/1-stage/: config.nix
icecap/nix/host/2-stage/: config.nix
icecap/nix/realm/ddl/: x.py
icecap/nix/realm/fake-libc/src/: fake.c
icecap/src/python/: realm.py
icecap/src/rust/runtime-manager-supervisor/: Cargo.toml
icecap/src/rust/runtime-manager-supervisor/src/: main.rs
platform-services/src/: icecap_platform_services.rs  lib.rs
proxy-attestation-server/: Cargo.toml
proxy-attestation-server/src/: attestation.rs
proxy-attestation-server/src/attestation/: icecap.rs
psa-attestation/: Cargo.toml  build.rs
runtime-manager/: .gitignore  Cargo.toml  shell.nix
runtime-manager/src/: main.rs  runtime_manager_icecap.rs  runtime_manager_nitro.rs
runtime-manager/src/managers/: error.rs  execution_engine_manager.rs  mod.rs
sdk/freestanding-execution-engine/: Cargo.toml
session-manager/: Cargo.toml
sgx-root-enclave/: Cargo.toml
test-collateral/: Makefile  proxy-attestation-server.db  shell.nix
test-collateral/generate-policy/src/: main.rs
transport-protocol/: Cargo.toml  build.rs
transport-protocol/src/: lib.rs
veracruz-client/: Cargo.toml
veracruz-server/: Cargo.toml
veracruz-server-test/: .gitignore  Cargo.toml  build.rs  populate-test-database.sh  shell.nix
veracruz-server-test/src/: main.rs
veracruz-server/src/: veracruz_server.rs  veracruz_server_icecap.rs
veracruz-test/: build.rs
veracruz-utils/: Cargo.toml
veracruz-utils/src/platform/: mod.rs
veracruz-utils/src/platform/icecap/: message.rs
veracruz-utils/src/platform/nitro/: nitro.rs
veracruz-utils/src/policy/: policy.rs
