[package]
name = "runtime_manager_enclave"
version = "0.3.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
build = "build.rs"
description = "The trusted Veracruz runtime's command-and-control module.  Co-ordinates and directs the rest of the runtime."

[lib]
name = "runtime_manager_enclave"
crate-type = ["staticlib"]
path = "src/lib.rs"

[[bin]]
name = "runtime_manager_enclave"
path = "src/main.rs"

[features]
sgx = ["transport-protocol/sgx", "session-manager/sgx", "veracruz-utils/sgx", "wasmi/mesalock_sgx", "execution-engine/sgx", "rustls/mesalock_sgx", "protobuf/mesalock_sgx", "ring/mesalock_sgx", "sgx_types" , "sgx_tstd", "sgx_tcrypto", "sgx_tdh", "wasi-types/sgx"]
tz = ["wasmi/std", "session-manager/tz", "execution-engine/tz", "veracruz-utils/tz", "libc", "optee-utee-sys", "optee-utee", "serde_json/alloc", "wasi-types/std"]
nitro = [ "execution-engine/nitro", "wasmi/non_sgx", "session-manager/nitro", "veracruz-utils/nitro", "nsm_io", "nsm_lib", "ring/nitro", "nix", "byteorder", "bincode", "wasi-types/std"]
icecap = [
    "veracruz-utils/icecap", "transport-protocol/icecap", "execution-engine/icecap", "session-manager/icecap", "wasmi/non_sgx",
    "icecap-core", "icecap-start-generic", "icecap-std-external",
    "serde", "bincode", "log", "libm",
]

[dependencies]
session-manager = { path = "../session-manager"}
lazy_static = {version = "1.4.0", features=["spin_no_std"] }
execution-engine = { path = "../execution-engine" }
transport-protocol = { path = "../transport-protocol" }
protobuf = { git = "https://github.com/veracruz-project/rust-protobuf.git", branch = "veracruz" }
rustls = { git = "https://github.com/veracruz-project/rustls.git", branch = "veracruz" }
ring = { git = "https://github.com/veracruz-project/ring.git", branch = "veracruz" }
veracruz-utils = { path = "../veracruz-utils" }
wasmi = { git = "https://github.com/veracruz-project/wasmi.git", branch = "veracruz" }
hex = { version = "=0.4.2", default-features = false }
serde_json = { git = "https://github.com/veracruz-project/json.git", branch = "veracruz" }
err-derive = "0.2"
nix = { version = "0.15", optional = true}
byteorder = { version = "1.3", optional = true }
bincode = { git = "https://github.com/veracruz-project/bincode.git", branch = "veracruz", default-features = false, optional = true }
libc = { git = "https://github.com/veracruz-project/libc.git", branch = "veracruz", optional = true }
optee-utee-sys = { git = "https://github.com/veracruz-project/rust-optee-trustzone-sdk.git", branch = "veracruz", optional = true }
optee-utee = { git = "https://github.com/veracruz-project/rust-optee-trustzone-sdk.git", branch = "veracruz", optional = true }
nsm_lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", branch = "main", package="nsm-lib", optional = true }
nsm_io =  { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", branch = "main", package = "nsm-io", optional = true }
sgx_types = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tcrypto = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tdh = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
wasi-types = { git = "https://github.com/veracruz-project/wasi-types.git", branch = "veracruz" }

# TODO
icecap-core = { path = "../icecap/realm-crates/icecap-core", optional = true }
icecap-start-generic = { path = "../icecap/realm-crates/icecap-start-generic", optional = true }
icecap-std-external = { path = "../icecap/realm-crates/icecap-std-external", optional = true }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
log = { version = "0.4", optional = true }
libm = { version = "0.2", optional = true } # HACK

[build-dependencies]
uuid = { version = "0.7", features = ["v4"] }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_alloc = { branch="veracruz", git = "https://github.com/veracruz-project/incubator-teaclave-sgx-sdk.git", optional = true }

[profile.release]
lto = true


[patch."https://github.com/veracruz-project/ring.git"]
ring = { path = "../../local/minor-patches/rust/ring", optional = true }
[patch."https://github.com/veracruz-project/rust-protobuf.git"]
protobuf = { path = "../../local/minor-patches/rust/protobuf/protobuf", optional = true }
[patch."https://github.com/stepancheg/rust-protobuf.git"]
protobuf = { path = "../../local/minor-patches/rust/protobuf/protobuf", optional = true }
